	* Palette can be copied to or from the canvas using the Edit menu
	* Horizontal and vertical ramps can be created using the Selection menu
	* Shapeburst gradient now used for filling gradients when no placement exists (see handbook section 3.5.6.5)
	* Workaround for bug in libpng versions 1.2.17 - 1.2.24 added (was losing extra channels when loading)
	* BUGFIX - canvas, view and palette area borders now can't be messed up by theme engines

3.20	2007-12-27

	* mtPaint is now licensed as GPL version 3 (or later)
	* Chinese (Simplified) added by puppychinese(Cecc)
	* Japanese translation added by Norihiro YONEDA
	* Polish translation updated by Groszek150(LucaS)
	* FreeType text pasting facility added
	* Actions section added to File menu
	* Sharper image reduction toggle added to "Scale Canvas"
	* Spacing for non-continuous tools is now configurable - right click the continuous mode toggle
	* "Blend" drawing mode added
	* "Unassociate Alpha" operation added to Channels menu
	* Palette is now stored in RGB PNG files
	* PNG compression level made configurable
	* TGA file format save/load added
	* JPEG2000 file format save/load added (EXPERIMENTAL)
	* XPM files with up to 4096 colours can now be saved and loaded as RGB images
	* Palette->Dither A sets colour A/B and the pattern based on the current A colour and the palette
	* Max-min quantizer added - creates small palettes with higher saturation and contrast
	* Faster and better PNN quantizer replaces the old DL3 quantizer
	* Full error precision toggle added to settings page of 'Convert To Indexed' window
	* Eliminated flicker when scrolling canvas in GTK+1 and GTK+2/Windows
	* Dragging the main/view window divider made to behave in GTK+1
	* Main menu now rearranges itself to fit in window
	* Tile based undo system introduced to save memory when changes affect only small areas of the canvas
	* Max undo levels now configurable (from 10 to 1000)
	* Image loading now can be made undoable